[MP2-3221] Fixed overlapping margins for overview tab of verification of project reports

--- a/jems-ui/src/app/project/project-application/report/project-verification-report/project-verification-report-overview-tab/verification-report-total-eligible-per-sources/verification-report-total-eligible-per-sources.component.scss
+++ b/jems-ui/src/app/project/project-application/report/project-verification-report/project-verification-report-overview-tab/verification-report-total-eligible-per-sources/verification-report-total-eligible-per-sources.component.scss
@@ -29,9 +29,8 @@ mat-table {
   padding-left: .25rem;
 }
 
-.border {
+.border-bottom {
   border-bottom: 1px solid var(--table-border-color) !important;
-  border-top: 1px solid var(--table-border-color) !important;
 }
 
 
